[package]
name = "tokio-prometheus-channel-backpressure"
version = "0.1.0"
edition = "2021"
description = "Metered tokio channels with Prometheus metrics integration"
authors = ["Francois Garillot <francois@garillot.net>"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/tokio-prometheus-channel-backpressure"
documentation = "https://docs.rs/tokio-prometheus-channel-backpressure"
readme = "README.md"
keywords = ["tokio", "prometheus", "metrics", "channel", "async"]
categories = ["asynchronous", "development-tools::monitoring", "concurrency"]
rust-version = "1.65.0"

[dependencies]
futures = { version = "0.3.31", features = ["std"] }
prometheus = { version = "0.13.4", features = ["process"] }
tokio = { version = "1.36.0", features = ["full", "rt", "rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
pin-project = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
